--- a/work.html
+++ b/work.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Welcome to SSmith's Porfolio</title>
+    <title>View My Work</title>
   </head>
-  <body id="bg-img">
+
+  <body>
     <header>
       <div class="menu-btn">
         <div class="btn-line"></div>
@@ -25,13 +26,13 @@
           <div class="portrait"></div>
         </div>
         <ul class="menu-nav">
-          <li class="nav-item current">
+          <li class="nav-item">
             <a href="/" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="about.html" class="nav-link">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item current">
             <a href="work.html" class="nav-link">My Work</a>
           </li>
           <li class="nav-item">
@@ -40,20 +41,16 @@
         </ul>
       </nav>
     </header>
-    <main id="home">
-      <h1 class="lg-heading">
-        Shawn T. <span class="text-secondary">Smith</span>
-      </h1>
+    <main id="work">
+      <h1 class="lg-heading">My <span class="text-secondary">Work</span></h1>
       <h2 class="sm-heading">
-        Web Developer, Full Stack Engineer & Cloud Developer
+        Check out some of my projects...
       </h2>
-      <div class="icons">
-        <a href="#!"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="#!"><i class="fab fa-facebook fa-2x"></i></a>
-        <a href="#!"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="#!"><i class="fab fa-github fa-2x"></i></a>
-      </div>
+      <div class="projects"></div>
     </main>
+    <footer id="main-footer">
+      Copyright &copy; 2019
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
